replace log4j with logback, drop keycloak admin client and use rest api directly